--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,38 +1,20 @@
-name: CI/CD Deploy Flask VA App
+- name: Copy code to server
+  uses: appleboy/ssh-action@v0.1.6
+  with:
+    host: ${{ secrets.SERVER_HOST }}
+    username: ${{ secrets.SERVER_USER }}
+    key: ${{ secrets.SERVER_SSH_KEY }}
+    port: 22
+    source: "."
+    target: "/home/vauser/projects/va-report-tool/"
 
-on:
-  push:
-    branches: ["main"]   # triggers on push to main branch
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.11"
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Setup SSH
-      uses: webfactory/ssh-agent@v0.9.0
-      with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-    - name: Deploy to Kali Linux VM
-      run: |
-        ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "
-        cd /home/${{ secrets.SERVER_USER }}/Desktop/VA\ Report &&
-        git pull &&
-        pip3 install -r requirements.txt &&
-        pkill -f 'python3 app.py' || true &&
-        nohup python3 app.py &
-        "
+- name: Restart systemd service
+  uses: appleboy/ssh-action@v0.1.6
+  with:
+    host: ${{ secrets.SERVER_HOST }}
+    username: ${{ secrets.SERVER_USER }}
+    key: ${{ secrets.SERVER_SSH_KEY }}
+    port: 22
+    script: |
+      sudo systemctl daemon-reload
+      sudo systemctl restart va-report
